base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: loanhub
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
